# GraphStorage

./: CMakeLists.txt  Makefile  README.md  main.cc
example/wikigraph/: CMakeLists.txt  Makefile  README.md  import.cc  query.cc
src/: basic_iterator.h  basic_subscription.h  exceptions.h  graph_storage.cc  graph_storage.h  graph_storage.tmpl
src/query/: dummy_iterator.cc  dummy_iterator.h  logic_iterator.cc  logic_iterator.h  logic_iterator.tmpl  logic_subscription.cc  logic_subscription.h  logic_subscription.tmpl
src/query/logic/: logic_and_iterator.cc  logic_and_iterator.h  logic_and_subscription.cc  logic_and_subscription.h  logic_or_iterator.cc  logic_or_iterator.h  logic_or_subscription.cc  logic_or_subscription.h  logic_xor_iterator.cc  logic_xor_iterator.h  logic_xor_subscription.cc  logic_xor_subscription.h
src/storage/: buffer_utils.cc  buffer_utils.h  buffer_utils.tmpl  property_value.cc  property_value.h  storage_facade.cc  storage_facade.h  storage_facade.tmpl  storage_guard.cc  storage_guard.h
src/storage/id/: edge_id.cc  edge_id.h  identifier_id.cc  identifier_id.h  node_property_id.cc  node_property_id.h
src/storage/protobuf/: storage_record.proto
src/storage/query/: edge_iterator.cc  edge_iterator.h  edge_stream_distributor.cc  edge_stream_distributor.h  edge_stream_event.h  edge_stream_pattern.cc  edge_stream_pattern.h  edge_subscription.cc  edge_subscription.h  property_iterator.cc  property_iterator.h  query_state.cc  query_state.h  storage_cursor.cc  storage_cursor.h  storage_cursor.tmpl  storage_iterator.cc  storage_iterator.h  storage_iterator.tmpl
src/storage/write/: maintenance_batch.cc  maintenance_batch.h  maintenance_buffer.cc  maintenance_buffer.h  node_batch.cc  node_batch.h  node_buffer.cc  node_buffer.h  write_batch.cc  write_batch.h  write_batch.tmpl  (+3 more)
